Avanza nueva configuracion acorde a sip 2.0b11

--- a/config/database.yml
+++ b/config/database.yml
@@ -6,12 +6,12 @@ default: &default
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
   host: /var/www/var/run/postgresql
-  username: sipdes      # OJO Cambie aqui por su usuario PostgreSQL
-  password: aquilaclave # OJO Cambie aqui por la clave de su usario PostgreSQL
+  username: <%= ENV.fetch('BD_USUARIO', 'sipdes') %>
+  password: <%= ENV.fetch('BD_CLAVE') %>
 
 development:
   <<: *default
-  database: siasom_des # OJO Cambie aqui por la base en modo desarrollo
+  database: <%= ENV.fetch('BD_DES', 'siasom_des') %>
 
   # Minimum log levels, in increasing order:
   #   debug5, debug4, debug3, debug2, debug1,
@@ -24,7 +24,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: siasom_pru # OJO Cambie aqui por la base en modo pruebas
+  database: <%= ENV.fetch('BD_PRUEBA', 'siasom_pru') %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -47,4 +47,4 @@ test:
 #
 production:
   <<: *default
-  database: siasom_pro # OJO Cambie aqui por la base en modo producción
+  database: <%= ENV.fetch('BD_PRUEBA', 'siasom_pro') %>
