--- a/.env.plantilla
+++ b/.env.plantilla
@@ -1,5 +1,100 @@
-export RC=sivel2             # Guión rc para arranque en modo producción
-export RAILS_ENV=development # Ambiente en el cual correo por omisión
-export PUERTODES=54300       # Puerto cuando se lanza en modo desarrollo
-export IPDES=0.0.0.0         # IP cuando se lanza en modo desarrollo
+#!/bin/sh
+# Variables de configuración de la aplicación
+# Damos precedencia a las especificadas en línea de ordenes
+
+# Base de datos
+
+if (test "$BD_USUARIO" = "") then {
+  export BD_USUARIO=sipdes
+} fi;
+if (test "$BD_CLAVE" = "") then {
+  export BD_CLAVE=clave
+} fi;
+if (test "$BD_DES" = "") then {
+  export BD_DES=siasom_des
+} fi;
+if (test "$BD_PRUEBA" = "") then {
+  export BD_PRUEBA=siasom_pru
+} fi;
+if (test "$BD_PRO" = "") then {
+  export BD_PRO=siasom_pro
+} fi;
+
+
+# Despliegue común desarrollo y producción
+
+if (test "$CONFIG_HOSTS" = "") then {
+  export CONFIG_HOSTS=192.168.10.1
+} fi;
+if (test "$RUTA_RELATIVA" = "") then {
+  export RUTA_RELATIVA=/asom/si/
+} fi;
+if (test "$DIRAP" = "") then {
+  export DIRAP="$HOME/comp/rails/si_asom/"
+} fi;
+
+
+# Despliegue en modo desarrollo
+
+if (test "$RAILS_ENV" = "") then {
+  export RAILS_ENV=development
+} fi;
+if (test "$IPDES" = "") then {
+  export IPDES=192.168.10.1
+} fi;
+if (test "$PUERTODES" = "") then {
+  export PUERTODES=3000
+} fi;
+
+
+# Despliegue en modo producción con unicorn
+
+if (test "$RC" = "") then {
+  export RC=sip
+} fi;
+if (test "$PUERTOUNICORN" = "") then {
+  export PUERTOUNICORN=3015
+} fi;
+if (test "$USUARIO_AP" = "") then {
+  export USUARIO_AP=miusuario
+} fi;
+if (test "$SECRET_KEY_BASE" = "") then {
+  export SECRET_KEY_BASE=123456789abcdef
+} fi;
+
+
+# Configuraciones requeridas por sip
+
+if (test "$SIP_RUTA_ANEXOS" = "") then {
+  export SIP_RUTA_ANEXOS=${DIRAP}/archivos/anexos
+} fi;
+if (test "$SIP_RUTA_VOLCADOS" = "") then {
+  export SIP_RUTA_VOLCADOS=${DIRAP}/archivos/bd
+} fi;
+
+
+# Configuraciones requeridas por heb412
+
+if (test "$HEB412_RUTA" = "") then {
+  export HEB412_RUTA=${DIRAP}/public/heb412
+} fi;
+
+
+# Configuraciones de sivel2
+
+if (test "$SIVEL2_CONSWEB_PUBLICA" = "") then {
+  export SIVEL2_CONSWEB_PUBLICA=
+} fi;
+
+if (test "$SIVEL2_CONSWEB_MAX" = "") then {
+  export SIVEL2_CONSWEB_MAX=2000
+} fi;
+
+if (test "$SIVEL2_CONSWEB_EPILOGO" = "") then {
+  export SIVEL2_CONSWEB_EPILOGO="<br>Si requiere más puede suscribirse a SIVeL Pro"
+} fi;
+
+if (test "$SIVEL2_MAPAOSM_DIASATRAS" = "") then {
+  export SIVEL2_MAPAOSM_DIASATRAS=182
+} fi;
 
