--- a/.env.plantilla
+++ b/.env.plantilla
@@ -32,13 +32,13 @@ if (test "$RUTA_RELATIVA" = "") then {
 if (test "$DIRAP" = "") then {
   export DIRAP="$HOME/comp/rails/si_asom/"
 } fi;
+if (test "$RAILS_ENV" = "") then {
+  export RAILS_ENV=development
+} fi;
 
 
 # Despliegue en modo desarrollo
 
-if (test "$RAILS_ENV" = "") then {
-  export RAILS_ENV=development
-} fi;
 if (test "$IPDES" = "") then {
   export IPDES=192.168.10.1
 } fi;
@@ -50,7 +50,7 @@ if (test "$PUERTODES" = "") then {
 # Despliegue en modo producción con unicorn
 
 if (test "$RC" = "") then {
-  export RC=sip
+  export RC=siasom
 } fi;
 if (test "$PUERTOUNICORN" = "") then {
   export PUERTOUNICORN=3015
