--- a/.env.plantilla
+++ b/.env.plantilla
@@ -65,6 +65,9 @@ if (test "$SECRET_KEY_BASE" = "") then {
 
 # Configuraciones requeridas por sip
 
+if (test "$SIP_FORMATO_FECHA" = "") then {
+  export SIP_FORMATO_FECHA='dd/M/yyyy'
+} fi;
 if (test "$SIP_RUTA_ANEXOS" = "") then {
   export SIP_RUTA_ANEXOS=${DIRAP}/archivos/anexos
 } fi;
@@ -76,7 +79,14 @@ if (test "$SIP_RUTA_VOLCADOS" = "") then {
 # Configuraciones requeridas por heb412
 
 if (test "$HEB412_RUTA" = "") then {
-  export HEB412_RUTA=${DIRAP}/public/heb412
+  export HEB412_RUTA=/public/heb412
+} fi;
+
+
+# Configuraciones requeridas por cor1440
+
+if (test "$COR1440_PERMISOS_POR_OFICINA" = "") then {
+  export COR1440_PERMISOS_POR_OFICINA=1
 } fi;
 
 
