--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "si_asom",
-  "private": true,
+  "private": false,
+  "version": "0.1.0",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@rails/ujs": "^6.0.1",
@@ -8,6 +9,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-datepicker": "^1.9.0",
     "chosen-js": "^1.8.7",
+    "expose-loader": "^1.0.0",
     "gridstack": "^0.6.0",
     "is-svg": "^4.2.2",
     "jquery": "^3.6.0",
@@ -27,9 +29,10 @@
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
-  "version": "0.1.0",
   "devDependencies": {
-    "expose-loader": "^1.0.0",
+    "glob-parent": "^5.1.2",
+    "normalize-url": "^4.5.1",
+    "postcss": "^8.2.10",
     "webpack-dev-server": "^3.11.2"
   }
 }
