--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ app/javascript/controllers/sal7711_gen
 app/javascript/controllers/sivel2_gen
 cobertura-sistema/
 cobertura-unitarias/
+app/views/sip/
