--- a/.env.plantilla
+++ b/.env.plantilla
@@ -40,8 +40,19 @@ if (test "$RAILS_ENV" = "") then {
 } fi;
 
 
-# Despliegue en modo desarrollo
+# Para pruebas
+if (test "$PUERTOPRU" = "") then {
+  export PUERTOPRU=31311
+} fi;
+if (test "$MSIP_REPORTEREGRESION" = "") then {
+  # Tipicamente en aplicacines msip:reporteregresion y 
+  # en motores app:msip:reporteregresion pero hay motores extraños
+  # que requieren msip:reporteregresion
+  export MSIP_REPORTEREGRESION="msip:reporteregresion"
+} fi;
 
+
+# Despliegue en modo desarrollo
 if (test "$IPDES" = "") then {
   export IPDES=192.168.10.1
 } fi;
