--- a/package.json
+++ b/package.json
@@ -7,22 +7,19 @@
     "start": "node esbuild-des.config.mjs"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@hotwired/stimulus": "^3.2.2",
-    "@hotwired/turbo-rails": "^7.1.1",
+    "@hotwired/turbo-rails": "^8.0.10",
     "@pasosdejesus/autocompleta_ajax": "https://gitlab.com/pasosdeJesus/autocompleta_ajax.git",
-    "@popperjs/core": "^2.9.3",
-    "@rails/ujs": "^7.1.1",
+    "@popperjs/core": "^2.11.8",
+    "@rails/ujs": "^7.1.3-4",
     "apexcharts": "^3.29.1",
     "babel-plugin-macros": "^3.1.0",
-    "bootstrap": "^5.3.2",
-    "bootstrap-datepicker": "^1.10.0",
-    "chosen-js": "^1.8.7",
-    "esbuild": "^0.19.4",
+    "bootstrap": "^5.3.3",
+    "esbuild": "^0.24.0",
     "gridstack": "^0.6.0",
-    "is-svg": "^4.2.2",
+    "is-svg": "^5.1.0",
     "jquery": "^3.7.1",
-    "jquery-ui": "^1.12.1",
     "leaflet": "^1.6.0",
     "leaflet.markercluster": "^1.4.1",
     "popper.js": "^2.0.0-next.4",
@@ -33,7 +30,8 @@
     "react-table": "^7.6.3",
     "react_ujs": "^2.6.1",
     "serialize-javascript": "^3.1.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "tom-select": "^2.3.1"
   },
   "devDependencies": {
     "glob-parent": "^5.1.2",
